deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerchat-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peerchat-front
  template:
    metadata:
      labels:
        app: peerchat-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: peerchat-front
        image: malpa222/peerchat:frontend
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: peerchat-front
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: azure-vote-front
